RESOLVED FIXED Bug 82844
Animate animatedPoints instead of points for SVGPoly*Elements
https://bugs.webkit.org/show_bug.cgi?id=82844
Summary Animate animatedPoints instead of points for SVGPoly*Elements
Nikolas Zimmermann
Reported 2012-04-01 05:23:17 PDT
Animate animatedPoints instead of points for SVGPoly*Elements. This corresponds to the AnimatedPoints attribute property enum which needs to be handled in the animVal concept.
Attachments
Patch (18.69 KB, patch)
2012-04-01 05:31 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2012-04-01 05:31:50 PDT
Dirk Schulze
Comment 2 2012-04-01 13:29:31 PDT
Comment on attachment 134994 [details] Patch Patch was smaller than it initial seemed to be (from the title). LGTM. r=me.
Nikolas Zimmermann
Comment 3 2012-04-03 03:36:24 PDT
Note You need to log in before you can comment on or make changes to this bug.